(fetch) modificaciones en vistas de vehiculo y reserva